<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>de.briemla</groupId>
  <artifactId>fxml-template-loader</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>FXML Template Loader</name>
  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <dependencies>
  	<dependency>
  		<groupId>junit</groupId>
  		<artifactId>junit</artifactId>
  		<version>4.11</version>
  		<scope>test</scope>
  	</dependency>
  	<dependency>
  		<groupId>org.hamcrest</groupId>
  		<artifactId>hamcrest-all</artifactId>
  		<version>1.3</version>
  		<scope>test</scope>
  	</dependency>
  	<dependency>
  		<groupId>org.mockito</groupId>
  		<artifactId>mockito-all</artifactId>
  		<version>1.9.5</version>
  		<scope>test</scope>
  	</dependency>
  	<dependency>
  		<groupId>nl.jqno.equalsverifier</groupId>
  		<artifactId>equalsverifier</artifactId>
  		<version>1.4.1</version>
  		<scope>test</scope>
  	</dependency>
  	<dependency>
  		<groupId>de.briemla</groupId>
  		<artifactId>javafx-test-utils</artifactId>
  		<version>0.0.1-SNAPSHOT</version>
  		<scope>test</scope>
  	</dependency>
  </dependencies>
</project>